@@ -6,6 +6,9 @@ However contributors are encouraged to add their own entries for their work.
 
 Since build 216:
 ----------------
+* The Pythonwin editor now remembers previous searches made in this session.
+  (patch #3468280 from kxroberto).
+  
 * The LOGFONT struct implementation (win32util) was extended to support the
   full LOGFONT struct as published by Microsoft.  This includes changes to
   win32util.LogFontToDict and win32util.DictToLogFont.  (Feature request
